--- a/index.html
+++ b/index.html
@@ -2,60 +2,80 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>우진정밀 - 정밀 CNC 가공</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>우진정밀 | CNC 정밀 가공 전문</title>
+  <link href="style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>우진정밀</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">회사소개</a></li>
-        <li><a href="#services">가공서비스</a></li>
-        <li><a href="#portfolio">포트폴리오</a></li>
-        <li><a href="#contact">문의하기</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>우진정밀</h1>
+      <nav>
+        <ul>
+          <li><a href="#about">회사소개</a></li>
+          <li><a href="#services">서비스</a></li>
+          <li><a href="#portfolio">포트폴리오</a></li>
+          <li><a href="#contact">문의하기</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
+
   <section id="hero">
-    <h2>정밀 선반 · 밀링 가공 전문업체</h2>
-    <p>다년간의 노하우와 최신 설비로 최고의 품질을 약속드립니다.</p>
-  </section>
-  <section id="about">
-    <h2>회사소개</h2>
-    <p>우진정밀은 정밀 선반, 밀링, CNC 가공을 전문으로 하는 기술 기반의 기업입니다. 고객 맞춤형 부품 가공부터 대량 생산까지 믿고 맡기실 수 있습니다.</p>
-  </section>
-  <section id="services">
-    <h2>가공 서비스</h2>
-    <ul>
-      <li>선반 가공 (Turning)</li>
-      <li>밀링 가공 (Milling)</li>
-      <li>정밀 부품 제작</li>
-    </ul>
-  </section>
-  <section id="portfolio">
-    <h2>포트폴리오</h2>
-    <div class="gallery">
-      <img src="gallery1.jpg" alt="가공 부품 1">
-      <img src="gallery2.jpg" alt="가공 부품 2">
-      <img src="gallery3.jpg" alt="가공 부품 3">
+    <div class="container">
+      <h2>정밀 CNC 가공의 모든 것</h2>
+      <p>우진정밀은 선반, 밀링, 정밀 가공에 특화된 기술력으로 고객의 요구에 정확히 응답합니다.</p>
     </div>
   </section>
-  <section id="contact">
-    <h2>문의하기</h2>
-    <form>
-      <input type="text" placeholder="이름" required />
-      <input type="email" placeholder="이메일" required />
-      <textarea placeholder="문의 내용" required></textarea>
-      <button type="submit">보내기</button>
-    </form>
-    <p>📞 전화문의: 010-2688-4973</p>
+
+  <section id="about">
+    <div class="container">
+      <h2>회사소개</h2>
+      <p>우진정밀은 오랜 경험과 첨단 장비를 바탕으로 정밀 가공 분야에서 최고의 품질을 추구합니다.</p>
+    </div>
   </section>
+
+  <section id="services">
+    <div class="container">
+      <h2>가공 서비스</h2>
+      <ul class="service-list">
+        <li>선반 가공 (Turning)</li>
+        <li>밀링 가공 (Milling)</li>
+        <li>정밀 부품 제작</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="portfolio">
+    <div class="container">
+      <h2>포트폴리오</h2>
+      <div class="gallery">
+        <img src="gallery1.jpg" alt="작업 샘플1">
+        <img src="gallery2.jpg" alt="작업 샘플2">
+        <img src="gallery3.jpg" alt="작업 샘플3">
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <div class="container">
+      <h2>문의하기</h2>
+      <form>
+        <input type="text" placeholder="이름" required>
+        <input type="email" placeholder="이메일" required>
+        <textarea placeholder="문의 내용을 입력해주세요." required></textarea>
+        <button type="submit">보내기</button>
+      </form>
+      <p class="phone">📞 전화문의: 010-2688-4973</p>
+    </div>
+  </section>
+
   <footer>
     <p>&copy; 2025 우진정밀. All rights reserved.</p>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
