--- a/index.html
+++ b/index.html
@@ -51,10 +51,17 @@
   <section id="portfolio">
     <div class="container">
       <h2>포트폴리오</h2>
+      <img src="product1.jpg" alt="대표 이미지" class="main-image">
       <div class="gallery">
-        <img src="gallery1.jpg" alt="작업 샘플1">
-        <img src="gallery2.jpg" alt="작업 샘플2">
-        <img src="gallery3.jpg" alt="작업 샘플3">
+<img src="product1.jpg" alt="가공 샘플 1">
+<img src="product2.jpg" alt="가공 샘플 2">
+<img src="product3.jpg" alt="가공 샘플 3">
+<img src="product4.jpg" alt="가공 샘플 4">
+<img src="product5.jpg" alt="가공 샘플 5">
+<img src="product6.jpg" alt="가공 샘플 6">
+<img src="product7.jpg" alt="가공 샘플 7">
+<img src="product8.jpg" alt="가공 샘플 8">
+<img src="product9.jpg" alt="가공 샘플 9">
       </div>
     </div>
   </section>
