--- a/index.html
+++ b/index.html
@@ -2,87 +2,64 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>우진정밀 | CNC 정밀 가공 전문</title>
-  <link href="style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>우진정밀 - CNC 정밀가공</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>우진정밀</h1>
-      <nav>
+    <header>
+        <h1>⚙️ 우진정밀</h1>
+        <p>선반 · 밀링 · 정밀가공 전문 기업</p>
+    </header>
+
+    <section class="hero">
+        <img src="product1.jpg" alt="대표 제품 사진" class="featured">
+    </section>
+
+    <section class="about">
+        <h2>회사소개</h2>
+        <p>우진정밀은 정밀한 기술력으로 고객의 요구를 만족시키는 CNC 가공 전문 업체입니다.</p>
+    </section>
+
+    <section class="services">
+        <h2>주요 서비스</h2>
         <ul>
-          <li><a href="#about">회사소개</a></li>
-          <li><a href="#services">서비스</a></li>
-          <li><a href="#portfolio">포트폴리오</a></li>
-          <li><a href="#contact">문의하기</a></li>
+            <li>선반 가공</li>
+            <li>밀링 가공</li>
+            <li>정밀 기계부품 가공</li>
         </ul>
-      </nav>
-    </div>
-  </header>
+    </section>
 
-  <section id="hero">
-    <div class="container">
-      <h2>정밀 CNC 가공의 모든 것</h2>
-      <p>우진정밀은 선반, 밀링, 정밀 가공에 특화된 기술력으로 고객의 요구에 정확히 응답합니다.</p>
-    </div>
-  </section>
+    <section class="gallery">
+        <h2>제품 갤러리</h2>
+        <div class="images">
+            <img src="product1.jpg" alt="제품1" />
+            <img src="product2.jpg" alt="제품2" />
+            <img src="product3.jpg" alt="제품3" />
+            <img src="product4.jpg" alt="제품4" />
+            <img src="product5.jpg" alt="제품5" />
+            <img src="product6.jpg" alt="제품6" />
+            <img src="product7.jpg" alt="제품7" />
+            <img src="product8.jpg" alt="제품8" />
+            <img src="product9.jpg" alt="제품9" />
+        </div>
+    </section>
 
-  <section id="about">
-    <div class="container">
-      <h2>회사소개</h2>
-      <p>우진정밀은 오랜 경험과 첨단 장비를 바탕으로 정밀 가공 분야에서 최고의 품질을 추구합니다.</p>
-    </div>
-  </section>
+    <section class="contact">
+        <h2>문의하기</h2>
+        <form>
+            <input type="text" placeholder="이름" required />
+            <input type="email" placeholder="이메일" required />
+            <textarea placeholder="문의 내용" required></textarea>
+            <button type="submit">보내기</button>
+        </form>
+        <p>📞 연락처: 010-2688-4973</p>
+    </section>
 
-  <section id="services">
-    <div class="container">
-      <h2>가공 서비스</h2>
-      <ul class="service-list">
-        <li>선반 가공 (Turning)</li>
-        <li>밀링 가공 (Milling)</li>
-        <li>정밀 부품 제작</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="portfolio">
-    <div class="container">
-      <h2>포트폴리오</h2>
-      <img src="product1.jpg" alt="대표 이미지" class="main-image">
-      <div class="gallery">
-<img src="product1.jpg" alt="가공 샘플 1">
-<img src="product2.jpg" alt="가공 샘플 2">
-<img src="product3.jpg" alt="가공 샘플 3">
-<img src="product4.jpg" alt="가공 샘플 4">
-<img src="product5.jpg" alt="가공 샘플 5">
-<img src="product6.jpg" alt="가공 샘플 6">
-<img src="product7.jpg" alt="가공 샘플 7">
-<img src="product8.jpg" alt="가공 샘플 8">
-<img src="product9.jpg" alt="가공 샘플 9">
-      </div>
-    </div>
-  </section>
-
-  <section id="contact">
-    <div class="container">
-      <h2>문의하기</h2>
-      <form>
-        <input type="text" placeholder="이름" required>
-        <input type="email" placeholder="이메일" required>
-        <textarea placeholder="문의 내용을 입력해주세요." required></textarea>
-        <button type="submit">보내기</button>
-      </form>
-      <p class="phone">📞 전화문의: 010-2688-4973</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 우진정밀. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
+    <footer>
+        <p>&copy; 2025 우진정밀. All rights reserved.</p>
+    </footer>
 </body>
 </html>
