--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </section>
 
-  <section id="services" class="section dark">
+  <section id="services" class="section">
     <div class="container">
       <h2>주요 서비스</h2>
       <ul>
@@ -57,7 +57,7 @@
     </div>
   </section>
 
-  <section id="portfolio" class="section dark">
+  <section id="portfolio" class="section">
     <div class="container">
       <h2>포트폴리오</h2>
       <div class="gallery">
