--- a/index.html
+++ b/index.html
@@ -2,89 +2,48 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>우진정밀 | CNC 정밀가공</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>우진정밀 - CNC 가공</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>⚙ 우진정밀</h1>
-      <p>정밀함을 추구하는 CNC 가공 전문기업</p>
-      <nav>
-        <a href="#about">회사소개</a>
-        <a href="#services">서비스</a>
-        <a href="#equipment">보유설비</a>
-        <a href="#portfolio">포트폴리오</a>
-        <a href="#contact">문의하기</a>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <div class="hero">
+            <h1>CNC 가공 전문</h1>
+            <p>선반 · 밀링 · 정밀가공</p>
+            <a href="#services" class="btn">자세히 알아보기</a>
+        </div>
+    </header>
 
-  <section class="hero">
-    <div class="container">
-      <h2>정밀 기술과 신뢰의 가치를 제공합니다</h2>
-      <p>우진정밀은 다양한 산업 분야에 최적화된 정밀 가공 솔루션을 제공합니다.</p>
-    </div>
-  </section>
+    <section id="services">
+        <h2>서비스</h2>
+        <div class="services">
+            <div class="service-item">
+                <div class="icon">⚙️</div>
+                <h3>선반</h3>
+                <p>Turning</p>
+            </div>
+            <div class="service-item">
+                <div class="icon">⚙️</div>
+                <h3>밀링</h3>
+                <p>Milling</p>
+            </div>
+            <div class="service-item">
+                <div class="icon">⚙️</div>
+                <h3>정밀가공</h3>
+                <p>Precision Machining</p>
+            </div>
+        </div>
+    </section>
 
-  <section id="about" class="section">
-    <div class="container">
-      <h2>회사소개</h2>
-      <p>우진정밀은 풍부한 경험과 기술력을 바탕으로, 정밀도와 품질을 최우선으로 하는 CNC 가공 전문업체입니다. 소량 정밀 부품 가공부터 다양한 고객 맞춤형 생산까지 폭넓게 대응하고 있습니다.</p>
-    </div>
-  </section>
+    <section id="portfolio">
+        <h2>포트폴리오</h2>
+        <p>추후 추가될 예정입니다</p>
+    </section>
 
-  <section id="services" class="section">
-    <div class="container">
-      <h2>주요 서비스</h2>
-      <ul>
-        <li>선반 가공 (Turning)</li>
-        <li>밀링 가공 (Milling)</li>
-        <li>정밀 부품 가공 및 조립</li>
-        <li>시제품 제작</li>
-        <li>도면 기반 맞춤형 가공</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="equipment" class="section">
-    <div class="container">
-      <h2>보유 설비</h2>
-      <p>※ 설비 사진과 상세 설명은 추후 추가될 예정입니다.</p>
-    </div>
-  </section>
-
-  <section id="portfolio" class="section">
-    <div class="container">
-      <h2>포트폴리오</h2>
-      <div class="gallery">
-        <img src="product1.jpg" alt="제품1" />
-        <img src="product2.jpg" alt="제품2" />
-        <img src="product3.jpg" alt="제품3" />
-      </div>
-    </div>
-  </section>
-
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>문의하기</h2>
-      <form>
-        <input type="text" placeholder="이름" required />
-        <input type="email" placeholder="이메일" required />
-        <textarea placeholder="문의 내용을 입력해주세요" required></textarea>
-        <button type="submit">보내기</button>
-      </form>
-      <p class="phone">📞 010-2688-4973</p>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 우진정밀. All rights reserved.</p>
-    </div>
-  </footer>
+    <footer>
+        <p>© 2025 우진정밀 | All rights reserved.</p>
+    </footer>
 </body>
 </html>
